[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pygeomag"
authors = [
  { name="Justin Myers" },
]
description = "A python port of the World Magnetic Model (WMM)"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/boxpet/pygeomag"
"Bug Tracker" = "https://github.com/boxpet/pygeomag/issues"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "pygeomag.__version__"}
